--- a/apps/core/health/templates/contact.html
+++ b/apps/core/health/templates/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body %}
 <div class="map p-2" style="margin-top:6%;border:3px solid lightgray">
-		<iframe style="width:100%;height:400px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7008.270532603887!2d77.19946512476322!3d28.56570060260679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2704247110f%3A0x2d462cca004e2ad0!2sAnsari%20Nagar%20West%2C%20New%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1639728812206!5m2!1sen!2sin"
+		<iframe style="width:100%;height:400px" src="https://www.google.com/maps?q=Pittugala,Malabe,Sri%20Lanka&output=embed"
 	allowfullscreen></iframe>
 </div>
 	<div class="contact-w3l py-5" id="contact">
@@ -16,12 +16,15 @@
 				<div class="col-lg-6 contact-agileits-w3layouts">
 					
 					<p class="para-agileits-w3layouts">
-						<i class="fa fa-map-marker pr-3"></i>Lorem ipsum, dolor sit</p>
+						<i class="fa fa-map-marker pr-3"></i>17/8, Pittugala, Malabe</p>
 					<p class="para-agileits-w3layouts my-sm-3 my-2">
-						<i class="fa fa-phone pr-3"></i>0123456789</p>
+						<i class="fa fa-phone pr-3"></i>+94 71 111 1111</p>
 					<p class="para-agileits-w3layouts">
 						<i class="fa fa-envelope-open pr-2"></i>
-						<a href="mailto:mail@example.com">binarycoders@gmail.com</a>
+						<a href="mailto:heartdiseaseprediction@gmail.com">heartdiseaseprediction@gmail.com</a>
+					</p>
+					<p class="para-agileits-w3layouts">
+						<i class="fa fa-building pr-2"></i>Heart.org
 					</p>
 				</div>
 				<div class="col-lg-6 regstr-r-w3-agileits mt-lg-0 mt-5">
