--- a/apps/core/health/templates/user_home.html
+++ b/apps/core/health/templates/user_home.html
@@ -15,7 +15,7 @@
 
                 <div class="p-4 bg-light rounded mb-4 text-center">
                     <div class="d-flex flex-wrap gap-2 justify-content-center">
-                        <a href="{% url 'add_heartdetail' %}" class="btn-modern btn-primary"><i class="fas fa-heartbeat"></i> Predict Disease</a>
+                        <a href="{% url 'prediction_form' %}" class="btn-modern btn-primary"><i class="fas fa-heartbeat"></i> Predict Disease</a>
                         
                         <a href="{% url 'view_search_pat' %}" class="btn-modern btn-info"><i class="fas fa-database"></i> My Predictions</a>
                     </div>
